Add templates extending

--- a/tags_app/accounts/templates/registration/login.html
+++ b/tags_app/accounts/templates/registration/login.html
@@ -1,22 +1,26 @@
-<h2>Log in Form</h2>
+{% extends "base.html" %}
 
-{% for error in form.non_field_errors %}
-  <p style="color: red">{{ error }}</p>
-{% endfor %}
+{% block content%}
+  <h2>Log in Form</h2>
 
-<form method="post">
-  {% csrf_token %}
-  {% for field in form %}
-    <p>
-      {{ field.label_tag }}<br>
-      {{ field }}
-      {% if field.help_text %}
-        <small style="color: grey">{{ field.help_text }}</small>
-      {% endif %}
-      {% for error in field.errors %}
-        <p style="color: red">{{ error }}</p>
-      {% endfor %}
-    </p>
+  {% for error in form.non_field_errors %}
+    <p style="color: red">{{ error }}</p>
   {% endfor %}
-  <button type="submit">Log in</button>
-</form>
+
+  <form method="post">
+    {% csrf_token %}
+    {% for field in form %}
+      <p>
+        {{ field.label_tag }}<br>
+        {{ field }}
+        {% if field.help_text %}
+          <small style="color: grey">{{ field.help_text }}</small>
+        {% endif %}
+        {% for error in field.errors %}
+          <p style="color: red">{{ error }}</p>
+        {% endfor %}
+      </p>
+    {% endfor %}
+    <button type="submit">Log in</button>
+  </form>
+{% endblock %}
