--- a/tags_app/templates/index.html
+++ b/tags_app/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Main page{% endblock %}
+
 {% block content %}
     <div class="border border-success mx-2 p-3">
         <div>
