--- a/tags_app/templates/index.html
+++ b/tags_app/templates/index.html
@@ -3,8 +3,8 @@
 {% block title %}Main page{% endblock %}
 
 {% block content %}
-    <div class="border border-success mx-2 p-3">
-        <div>
+    <div class="border border-success mx-2 p-3 row">
+        <div class="col-12 col-sm-6">
             Hello,
             <span class="text-primary">
                 {% if username %}
@@ -15,11 +15,12 @@
             </span>
             !
         </div>
-        <div>
+        <div class="col-12 col-sm-6 d-flex justify-content-end">
             {% if username %}
-                <a href="accounts/logout">Log out</a>
+                <a class="btn btn-primary mr-2" href="accounts/logout">Log out</a>
             {% else %}
-                <a href="accounts/login">Log in</a>
+                <a class="btn btn-primary mr-2" href="accounts/login">Log in</a>
+                <a class="btn btn-success" href="accounts/signup">Sign up</a>
             {% endif %}
         </div>
     </h2>
