--- a/tags_app/accounts/templates/registration/login.html
+++ b/tags_app/accounts/templates/registration/login.html
@@ -3,6 +3,9 @@
 {% block title %}Log in{% endblock %}
 
 {% block content%}
+
+{% include "navbar.html" with page="login" %}
+
   <h2>Log in Form</h2>
 
   {% for error in form.non_field_errors %}
