--- a/tags_app/accounts/templates/registration/signup.html
+++ b/tags_app/accounts/templates/registration/signup.html
@@ -6,26 +6,5 @@
 
   {% include "navbar.html" with page="signup" %}
 
-  <h2>Sign up Form</h2>
-
-  {% for error in form.non_field_errors %}
-    <p style="color: red">{{ error }}</p>
-  {% endfor %}
-
-  <form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% if field.help_text %}
-          <small style="color: grey">{{ field.help_text }}</small>
-        {% endif %}
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
-        {% endfor %}
-      </p>
-    {% endfor %}
-    <button type="submit">Sign up</button>
-  </form>
+  {% include "registration/form.html" with form_type="Sign Up" %}
 {% endblock %}
